--- a/src/sass/draft/components/editor/editor.scss
+++ b/src/sass/draft/components/editor/editor.scss
@@ -1,8 +1,18 @@
-textarea {
-  &.editor {
+.editor {
+  flex-basis: 40%;
+  max-width: 40%;
+  height: 100vh;
+  margin-left: 5px;
+
+  .textarea {
+    overflow-wrap: break-word;
+    margin: 0;
+    height: 100vh;
+    border-right: 1px solid #d8d8d8;
     width: 100%;
-    height: 100%;
-    resize: none;
-    outline: none;
+
+    &:focus {
+      outline: none;
+    }
   }
 }
